benchmark-results/main/cseq/concurrentwitness2test.2025-11-17_11-13-00.logfiles/SV-COMP23_unreach-call.cseq-safe025_power.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe025_power.yml/safe025_power.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe025_power.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_xd5ry4bh/tmp/tmp0abfev0z.c
Compilation started
/tmp/BenchExec_run_xd5ry4bh/tmp/tmp0abfev0z.c: In function ‘P0’:
/tmp/BenchExec_run_xd5ry4bh/tmp/tmp0abfev0z.c:586:19: error: ‘FALSE’ undeclared (first use in this function)
  586 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_xd5ry4bh/tmp/tmp0abfev0z.c:586:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_xd5ry4bh/tmp/tmp0abfev0z.c: In function ‘P2’:
/tmp/BenchExec_run_xd5ry4bh/tmp/tmp0abfev0z.c:653:19: error: ‘FALSE’ undeclared (first use in this function)
  653 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_xd5ry4bh/tmp/tmp0abfev0z.c:654:19: error: ‘TRUE’ undeclared (first use in this function)
  654 |   weak$$choice2 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
